--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       const video = document.createElement('video');
       video.src = videoList[index].src;
       video.autoplay = true;
-      video.muted = true;
+      video.muted = false;
       video.playsInline = true;
       video.loop = true;
 
